[package]
name = "rustdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
colored = "2.0.0"
reqwest = { version="0.11", features = ["blocking"] }
toml = "0.7.3"
serde = "1.0.159"
serde_derive = "1.0.159"