[package]
name = "rustdiff"
version = "0.1.0"
edition = "2021"
authors = ["Hagemon <ooonefolder@gmail.com>"]
license = "MIT"
description = "A tool to summarize code changes"
readme = "README.md"
homepage = "https://github.com/hagemon/rustdiff"
repository = "https://github.com/hagemon/rustdiff"
keywords = ["chatgpt", "git diff", "git commit"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
colored = "2.0.0"
reqwest = { version="0.11", features = ["blocking", "json"] }
toml = "0.7.3"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.61"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1